--- a/src/App.sass
+++ b/src/App.sass
@@ -14,5 +14,16 @@ button
 .link
   cursor: pointer
 .app
+  position: fixed
   font-family: 'Noto Sans', sans-serif
   cursor: default
+  width: 100%
+  height: 100%
+  .filter
+    position: fixed
+    width: 100%
+    height: 100%
+    background-image: url('../assets/felt.jpg')
+    background-size: cover
+    opacity: 0.5
+    z-index: -1
