--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,5 +19,16 @@ button {
   cursor: pointer; }
 
 .app {
+  position: fixed;
   font-family: "Noto Sans", sans-serif;
-  cursor: default; }
+  cursor: default;
+  width: 100%;
+  height: 100%; }
+  .app .filter {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/felt.jpg");
+    background-size: cover;
+    opacity: 0.5;
+    z-index: -1; }
