--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -11,12 +11,14 @@
   font-size: 36px; }
   .game .player.top {
     margin-top: 25px; }
+  .game .player.bottom {
+    margin-top: 7.5px; }
 .game .client {
   margin: auto; }
   .game .client #container {
     border-radius: 25px;
-    box-shadow: 4px 4px 16px teal;
-    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 4px 4px 32px black;
+    background-color: rgba(255, 255, 255, 0.5);
     position: relative;
     top: 0;
     left: 0;
