--- a/src/Home.sass
+++ b/src/Home.sass
@@ -1,29 +1,35 @@
+%home-dimensions
+  width: 700px
+  height: 450px
+  
 .home
-  width: 750px
-  height: 300px
-  margin: 200px auto 0 auto
-  border: 1px solid black
-  border-radius: 25px
+  @extend %home-dimensions
+  margin: 150px auto 0 auto
   box-shadow: 4px 4px 32px black
+  border-radius: 5px
   background-color: rgba(255, 255, 255, 0.5)
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+  display: grid
+  grid-template-rows: 1fr 1fr 1fr
   article
-    margin-bottom: 20px
+    display: flex
+    justify-content: center
+    align-items: center
   .title
-    text-align: center
-    font-size: 60px
+    h1
+      font-size: 72px
   .player
+    font-size: 36px
+    background-color: rgba(255, 255, 255, 0.75)
     input
-      font-size: 30px
+      width: 350px
+      font-size: 36px
       border-radius: 20px
   .games
     display: flex
     justify-content: center
     button
       margin: 0 10px
+      height: 40px
     .games-dropdown
       max-height: 300px
       overflow-y: scroll
