--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,28 +1,33 @@
 .home {
-  width: 750px;
-  height: 300px;
-  margin: 200px auto 0 auto;
-  border: 1px solid black;
-  border-radius: 25px;
+  width: 700px;
+  height: 450px; }
+
+.home {
+  margin: 150px auto 0 auto;
   box-shadow: 4px 4px 32px black;
+  border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.5);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr; }
   .home article {
-    margin-bottom: 20px; }
-  .home .title {
-    text-align: center;
-    font-size: 60px; }
-  .home .player input {
-    font-size: 30px;
-    border-radius: 20px; }
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .home .title h1 {
+    font-size: 72px; }
+  .home .player {
+    font-size: 36px;
+    background-color: rgba(255, 255, 255, 0.75); }
+    .home .player input {
+      width: 350px;
+      font-size: 36px;
+      border-radius: 20px; }
   .home .games {
     display: flex;
     justify-content: center; }
     .home .games button {
-      margin: 0 10px; }
+      margin: 0 10px;
+      height: 40px; }
     .home .games .games-dropdown {
       max-height: 300px;
       overflow-y: scroll; }
