--- a/src/Game.sass
+++ b/src/Game.sass
@@ -3,10 +3,16 @@
   height: 600px
 
 .game
-  .title
-    text-align: center
-    font-size: 48px
-    height: 45px
+  .header
+    width: 100%
+    height: 50px
+    padding: 10px
+    display: flex
+    justify-content: space-between
+    .title
+      text-align: center
+      font-size: 48px
+  
   .player
     text-align: center
     font-size: 36px
