Add crossbrowser Sass mixins

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,4 +31,5 @@ button {
     background-image: url("../assets/felt.jpg");
     background-size: cover;
     opacity: 0.5;
+    filter: alpha(opacity=50);
     z-index: -1; }
