--- a/src/App.sass
+++ b/src/App.sass
@@ -1,3 +1,5 @@
+@import 'Mixins'
+  
 body
   margin: 0
   padding: 0
@@ -25,5 +27,5 @@ button
     height: 100%
     background-image: url('../assets/felt.jpg')
     background-size: cover
-    opacity: 0.5
+    +opacity(0.5)
     z-index: -1
